<?xml version="1.0" encoding="utf-8"?>
<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    style="?android:attr/spinnerDropDownItemStyle"
    android:singleLine="true"
    android:textColor="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:ellipsize="marquee"/>
