...
    android:padding="10dp"
    tools:context="com.appersiano.goustoexercise.listadditionalproduct.MainActivity"
    tools:showIn="@layout/activity_product_detail">


    <com.paulyung.laybellayout.LaybelLayout
        android:id="@+id/categoryContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
